# webpubsub-packages

./: .gitignore  .gitmodules  LICENSE  README.md
webpubsub-client/: CMakeLists.txt  CMakeSettings.json
webpubsub-client/impl/: DefaultWebSocket.hpp  default_web_socket.hpp  default_web_socket_factory.hpp
webpubsub-client/include/WebPubSub/Client/: WebPubSubClient.hpp  client.hpp  client_core.hpp  client_v2.hpp
webpubsub-client/include/WebPubSub/Client/Common/: Constants.hpp  Macros.hpp  asio.hpp
webpubsub-client/include/WebPubSub/Client/Common/scope/: scope_guard.hpp
webpubsub-client/include/WebPubSub/Client/Common/uri/: uri.hpp
webpubsub-client/include/WebPubSub/Client/Common/web_socket/: web_socket_close_status.hpp
webpubsub-client/include/WebPubSub/Client/Common/websocket/: websocket_close_status.hpp
webpubsub-client/include/WebPubSub/Client/Credentials/: WebPubSubCredential.hpp
webpubsub-client/include/WebPubSub/Client/Interfaces/: ILatentAction.hpp  IWebSocket.hpp  IWebSocketFactory.hpp
webpubsub-client/include/WebPubSub/Client/Internals/: AckIdManager.hpp  WebSocketFactory.hpp
webpubsub-client/include/WebPubSub/Client/Models/: RequestResult.hpp  WebPubSubClientOptions.hpp  WebPubSubGroups.hpp  callback_contexts.hpp  client_options.hpp  client_state.hpp  io_service.hpp  request_result.hpp  result.hpp  retry_mode.hpp  retry_options.hpp
webpubsub-client/include/WebPubSub/Client/Policies/: RetryPolicy.hpp
webpubsub-client/include/WebPubSub/Client/Utils/: Utils.hpp
webpubsub-client/include/WebPubSub/Client/async/: async_block.hpp  async_mlock.hpp  async_utils.hpp  exclusion_lock.hpp  operation_waiter.hpp  stop_notice.hpp  utils.hpp
webpubsub-client/include/WebPubSub/Client/concepts/: web_socket_factory_t.hpp  web_socket_t.hpp  websocket_c.hpp  websocket_factory_c.hpp  websocket_t.hpp
webpubsub-client/include/WebPubSub/Client/config/: core.hpp
webpubsub-client/include/WebPubSub/Client/coroutine_utils/: async_utils.hpp
webpubsub-client/include/WebPubSub/Client/credentials/: client_credential.hpp
webpubsub-client/include/WebPubSub/Client/exceptions/: exception.hpp
webpubsub-client/include/WebPubSub/Client/policies/: retry_policy.hpp
webpubsub-client/include/WebPubSub/Client/websocket/: default_websocket.hpp  default_websocket_factory.hpp
webpubsub-client/test/: BasicTests.hpp  DefaultWebSocketTests.hpp  WebPubSubClientTests.hpp  beast_tests.hpp  client_connect_test.hpp  client_connectivity_test.hpp  client_connectivity_test_v2.hpp  client_messaging_receive_test.hpp  client_reconnect_connect_test.hpp  client_tests.hpp  client_with_beast_test.hpp  default_web_socket_tests.hpp  default_websocket_tests.hpp  detail_tests.hpp  main.cpp
webpubsub-client/test/test_classes/: test_websocket_classes.hpp
(+106 files in other folders)
